# backup-client

./: .gitignore  README.md  angular.json  config.json  package-lock.json  package.json
.angular/cache/19.0.4/backup-client/: .tsbuildinfo  angular-compiler.db  angular-compiler.db-lock
electron/: main.js
json/: aliases.json  backup_directory.json  directories.json
public/: sw.js
src/: index.html  main.ts  styles.scss
src-tauri/: Cargo.toml  aliases.json  config.json  directories.json  installer.nsi  tauri.conf.json
src-tauri/src/: aliases.rs  backup.rs  config.rs  destinos.rs  directories.rs  diretorio.rs  firebird.rs  firebird_config.rs  gbakconfig.rs  json.rs  lib.rs  main.rs  tray.rs
src/app/: app.component.ts  app.config.ts  app.routes.ts  background.service.ts
src/app/aliases/: aliases.component.html  aliases.component.scss  aliases.component.ts
src/app/backup/: backup.component.html  backup.component.ts
src/app/backup/config/: config.component.ts
src/app/config/: config.component.html  config.component.ts
src/app/config-bkp/: config-bkp.component.html  config-bkp.component.scss  config-bkp.component.ts
src/app/config-panel/: config-panel.component.css  config-panel.component.html  config-panel.component.scss  config-panel.component.ts
src/app/dashboard/: dashboard.component.css  dashboard.component.html  dashboard.component.ts
src/app/destino/: destino.component.html  destino.component.scss  destino.component.ts
src/app/home/: home.component.html  home.component.scss  home.component.ts
src/app/locais/: locais.component.html  locais.component.ts
src/app/menu/: menu.component.html  menu.component.scss  menu.component.ts
src/app/nuvem/: nuvem.component.css  nuvem.component.html  nuvem.component.ts
src/app/origem/: origem.component.html  origem.component.scss  origem.component.ts
src/app/painel/: painel.component.ts  painel.routes.ts
src/app/painel/aliases/: aliases.component.html  aliases.component.scss  aliases.component.ts
src/app/painel/bkpdiretorios/: bkpdiretorios.component.html  bkpdiretorios.component.scss  bkpdiretorios.component.ts
src/app/painel/config/: config.component.html  config.component.scss  config.component.ts
src/app/painel/dashboard/: dashboard.component.ts
src/app/painel/destino/: destino.component.html  destino.component.scss  destino.component.ts
src/app/painel/firebird/: firebird.component.html  firebird.component.scss  firebird.component.ts
src/app/painel/hora/: hora.component.html  hora.component.ts
src/app/painel/menu/: menu.component.html  menu.component.scss  (+1 more)
src/app/relatorios/: relatorios.component.html  relatorios.component.ts
src/app/services/: background.service.ts  config.service.ts  notyf.service.ts
src/utils/: validatePassword.ts
(+33 files in other folders)
