[package]
name = "backup-client"
version = "0.1.0"
description = "Backup Client"
authors = ["CodesDevs"]
edition = "2021"

[dependencies]
cron = "0.13"
tauri = { version = "1", features = ["api-all", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dirs = "5.0.1"
notify = "5.0"
winreg = "0.10"
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
single-instance = "0.3"
zip = "0.6"
winapi = { version = "0.3", features = ["winbase"] }

[build-dependencies]
tauri-build = { version = "1", features = [] }
cc = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

[package.metadata.tauri]
build = "build.rs"

[package.metadata.winres]
windows = true

[package.metadata.tauri.windows]
windows-subsystem = "windows"
