[package]
name = "backup-client"
version = "0.1.0"
description = "Backup Client"
authors = ["CodesDevs"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
cron = "0.13"
tauri = { version = "2.5.1", default-features = false, features = ["wry", "custom-protocol", "tray-icon"] }
tauri-plugin-opener = "2.2.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5.0.1"
notify = "5.0"
winreg = "0.10"
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
single-instance = "0.3"
zip = "0.6"
winapi = { version = "0.3", features = ["winbase"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[package.metadata.tauri]
build = "build.rs"

[package.metadata.winres]
windows = true

[package.metadata.tauri.windows]
windows-subsystem = "windows"
