[package]
name = "backup-client"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "backup_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.2.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5.0.1"
notify = "5.0"
winreg = "0.10"
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
single-instance = "0.3"
zip = "0.6"
winapi = { version = "0.3", features = ["winbase"] }
cron = "0.12"

